# netknife

./: FortiGate Toolkit.py  README.md  pyproject.toml
src/netknife/: __init__.py  __main__.py  cli.py  utils.py
src/netknife.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/netknife/adapters/: __init__.py  fortigate.py
src/netknife/commands/: __init__.py  address.py  addrgrp.py  policy.py  probe.py  smart.py  vip.py
